# embucket

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh
.cargo/: config.toml
.github/workflows/: check.yml  dbt-incr-snowplow-web-run.yml  dbt-snowplow-web-run.yml  docs-ci.yml  experimental-rebase-on-main.yml  frontend-ci.yml  integration-tests.yml  rustdoc.yaml  tests.yml
benchmark/: README.md  benchmark.py  calculate_average.py  constants.py  data_preparation.py  docker_manager.py  env_example  requirements.txt  tpch_queries.py  utils.py
benchmark/clickbench/: __init__.py  clickbench_ddl.py  clickbench_queries.py  clickbench_table_names.py
benchmark/infrastructure/: README.md  bootstrap.sh  docker-compose.yml  env.tpl  main.tf  monitor_ram.sh  outputs.tf  terraform.tfvars.example  variables.tf
benchmark/tpcds/: __init__.py  tpcds_ddl.py  tpcds_queries.py  tpcds_table_names.py
benchmark/tpch/: __init__.py  tpch_ddl.py  tpch_queries.py  tpch_table_names.py
benchmark/tpch-datagen/: cleanup.sh
benchmark/tpch-datagen/infrastructure/: main.tf  outputs.tf  user_data.sh  variables.tf
benchmark/tpch/tpch-datagen/: README.md  deploy.sh  monitor.sh  quick-start.sh
benchmark/tpch_ddl/: customer_embucket.sql  lineitem_embucket.sql  nation_embucket.sql  orders_embucket.sql  part_embucket.sql  partsupp_embucket.sql  region_embucket.sql  supplier_embucket.sql
crates/api-iceberg-rest/src/: error.rs  handlers.rs  state.rs
crates/api-internal-rest/src/: error.rs  state.rs
crates/api-sessions/src/: layer.rs
crates/api-snowflake-rest/: Cargo.toml
crates/api-snowflake-rest/src/: lib.rs  models.rs  sql_state.rs
crates/api-ui/src/: error.rs  layers.rs  lib.rs  router.rs  state.rs  test_server.rs
crates/benchmarks/: .gitignore  Cargo.toml  README.md  bench.sh  compare.py
crates/benchmarks/queries/clickbench/: extended.sql  queries.sql
crates/benchmarks/queries/tpch/: q15.sql
crates/benchmarks/src/: lib.rs
crates/benchmarks/src/clickbench/: mod.rs  run.rs
crates/benchmarks/src/tpch/: convert.rs  mod.rs  run.rs  run_df.rs
crates/benchmarks/src/util/: mod.rs  options.rs  run.rs
crates/core-executor/: Cargo.toml
crates/core-executor/src/: duckdb.rs  error.rs  error_code.rs  lib.rs  models.rs  query.rs  running_queries.rs  service.rs  session.rs  snowflake_error.rs  tracing.rs  utils.rs
crates/core-executor/src/datafusion/: planner.rs  query_planner.rs  type_planner.rs
crates/core-executor/src/datafusion/logical_analyzer/: cast_analyzer.rs  custom_type_coercion.rs  like_type_analyzer.rs  union_schema_analyzer.rs
crates/core-executor/src/datafusion/logical_optimizer/: split_ordered_aggregates.rs
crates/core-executor/src/datafusion/logical_plan/: merge.rs
crates/core-executor/src/datafusion/physical_optimizer/: eliminate_empty_datasource_exec.rs  list_field_metadata.rs  mod.rs  remove_exec_above_empty.rs
crates/core-executor/src/datafusion/rewriters/: session_context.rs
crates/core-executor/src/duckdb/: functions.rs  mod.rs  query.rs
crates/core-executor/src/tests/: query.rs  service.rs  snowflake_errors.rs
crates/core-executor/src/tests/e2e/: e2e_common.rs  tests_e2e.rs
crates/core-executor/src/tests/sql/ddl/: table.rs
crates/core-executor/src/tests/sql/logical_analyzer/: custom_type_coercion.rs
crates/core-executor/src/tests/sql/logical_analyzer/casting/: decimal.rs  integer.rs
crates/core-executor/src/tests/sql/logical_analyzer/casting/snapshots/decimal/: query_decimal_cast_decimal.snap  query_decimal_cast_no_truncation.snap  query_decimal_cast_no_truncation_utf8.snap
crates/core-executor/src/tests/sql/logical_analyzer/casting/snapshots/integer/: query_int32_cast.snap  query_int32_cast_decimal.snap  query_int64_cast_decimal.snap  query_int_cast.snap  query_int_cast_decimal.snap  query_integer_cast.snap  query_integer_cast_decimal.snap
crates/core-executor/src/tests/sql/logical_analyzer/snapshots/custom_type_coercion/: query_coercion_int_division_to_decimal_advanced.snap  query_coercion_int_division_to_decimal_basic.snap
crates/core-executor/src/tests/sql/logical_optimizer/snapshots/split_ordered_aggregates/: query_split_ordered_mixed_three_aggregates.snap
crates/core-history/: Cargo.toml
crates/core-history/src/: errors.rs  history_store.rs  interface.rs  lib.rs  slatedb_history_store.rs  sqlite_history_store.rs
crates/core-history/src/entities/: query.rs  result_set.rs  worksheet.rs
crates/core-history/src/tests/: history.rs  mod.rs  resultset.rs  test_sqlite_via_conn.rs
crates/core-metastore/: Cargo.toml
crates/core-metastore/src/: error.rs  interface.rs  lib.rs  metastore.rs  sqlite_metastore.rs
crates/core-sqlite/: Cargo.toml  README.md  README.md~
crates/core-sqlite/src/: error.rs  lib.rs
crates/core-sqlite/src/vfs/: handle.rs  init.rs  lock_manager.rs  mod.rs
crates/core-sqlite/src/vfs/sqlite-plugin/: Cargo.toml
crates/core-sqlite/src/vfs/sqlite-plugin/examples/: memvfs.rs
crates/core-sqlite/src/vfs/sqlite-plugin/src/: flags.rs  logger.rs  mock.rs  vfs.rs
crates/core-utils/: Cargo.toml
crates/core-utils/src/: errors.rs  lib.rs
crates/df-catalog/src/: catalog_list.rs  table.rs
crates/embucket-functions/: Cargo.toml
crates/embucket-functions/src/: arrow_error.rs  json.rs  scalar_template.rs  session_params.rs  utils.rs
crates/embucket-seed/: Cargo.toml
crates/embucketd/: Cargo.toml
crates/embucketd/src/: cli.rs  layers.rs  main.rs
crates/error-stack/src/: error_chain.rs
test/dbt_integration_tests/dbt-snowplow-web/: .gitignore  DATABASE_CONNECTIONS.md  README.md  count_table_rows.py  count_table_rows.sql  db_connections.py  dbt_project.yml  env.template  gen_events.py  incremental.sh  load_events.py  load_events_data.sql  load_events_data_snowflake.sql  parse_dbt_simple.py  profiles.yml  requirements.txt  run_snowplow_web.sh  setup_docker.sh  setup_embucket.sh
ui/: .env.example  dist.tar  env.ts  eslint.config.mjs  index.html  orval.config.ts  package.json  pnpm-lock.yaml  ui_openapi.json  vite.config.ts
ui/docs/: TODO.md
ui/src/lib/: axios.ts
(+414 files in other folders)
