[package]
name = "embucket-benchmarks"
description = "Embucket Benchmarks"
edition = "2024"

[lints]
workspace = true

[features]
ci = []
default = ["snmalloc"]
snmalloc = ["dep:snmalloc-rs"]
mimalloc = ["dep:mimalloc"]

[dependencies]
core-executor = { path = "../core-executor" }
core-metastore = { path = "../core-metastore" }
core-history = { path = "../core-history" }
core-utils = { path = "../core-utils" }
slatedb = { workspace = true }
datafusion = { workspace = true, default-features = true }
env_logger = { version = "0.11.8" }
log = { version = "0.4.28" }
mimalloc = { version = "0.1", optional = true, default-features = false }
parquet = { version = "56.2.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
snmalloc-rs = { workspace = true, optional = true }
structopt = { version = "0.3", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
cfg-if = { version = "1.0.3" }
