[package]
name = "core-history"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[features]
default = ["sqlite"]
sqlite = []

[dependencies]
core-utils = { path = "../core-utils" }
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

core-sqlite = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
slatedb = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
mockall = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
cfg-if = { workspace = true }
deadpool-sqlite = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
