[package]
name = "core-utils"
version = "0.1.0"
edition = "2024"
license-file = { workspace = true }

[dependencies]
error-stack = { path = "../error-stack" }
error-stack-trace = { path = "../error-stack-trace" }

core-sqlite = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
iceberg = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slatedb = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
deadpool-sqlite = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true }
